@@ -40,6 +40,7 @@ Release 0.9.5
 - change dummy sidebox patch to look at both the current ZM and ZC theme
 - change getProductIdsForCategoryId() to (optionally) work recursive to
   scan the category incl. all sub-categories
+- oops: random constants moved to ZMTools
 
 Release 0.9.4.2
 - improve ZMAjaxController::flattenObject(); using ZMBeanUtils, correct
